--- a/style.css
+++ b/style.css
@@ -1,6 +1,3 @@
-/*Author: Nikki Moteva
-  Date Published: April 27, 2020*/
-
 html{
   margin : 0;
   padding : 0;
@@ -11,6 +8,23 @@ body {
   font-size: 1.8rem;
   font-family: "Fira Sans", sans-serif;
 }
+
+html, body {
+  width: 100%;
+  height: 100%;
+}
+
+body > div {
+  width: 90%;
+  height: 100%;
+  background: green;
+}
+
+body > div > div {
+  width: 100%;
+  background: red;
+}
+
 .navbar {
 	background-color: #474747;
 }
@@ -39,6 +53,7 @@ body {
 	margin-bottom: 0px auto;
 	margin-top: 0px auto;
 }
+
 
 .button {
   margin-top: -35px;
